--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.5.1",
     "express-openid-connect": "^2.17.1",
     "express-session": "^1.18.0",
+    "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
